<resources>
    <string name="app_name">Vitesse</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Surname</string>
    <string name="phone">Phone</string>
    <string name="mail">E-mail</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="salary">Salary expectations</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="about">About</string>
    <string name="or">Or £ </string>
    <string name="all">All</string>
    <string name="favorite">Favorites</string>
    <string name="search">Search</string>
    <string name="error_load_favorite_candidate">Unable to load favorite candidates.</string>
    <string name="error_add_favorite_candidate">Impossible to add the candidate to favorites.</string>
    <string name="error_delete_favorite_candidate">Impossible to delete the candidate from favorites.</string>
    <string name="error_load_candidate">Unable to load candidates.</string>
    <string name="error_add_candidate">Impossible to add the candidate.</string>
    <string name="error_delete_candidate">Unable to delete the candidate.</string>
    <string name="add_candidate">Add a candidate</string>
    <string name="edit_candidate">Edit a candidate</string>
    <string name="error_update_candidate">Error while updating candidate.</string>
    <string name="save">Save</string>
    <string name="enter_date">Enter a date</string>
    <string name="select_date">Select a date</string>
    <string name="age_unknown">Age unknown</string>
    <string name="year">%1$d years</string>
    <string name="delete_candidate">Candidate successfully deleted.</string>
    <string name="confirm_deletion">Deletion</string>
    <string name="question_delete_candidate">Are you sure you want to delete this candidate? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="candidate_not_found">Candidate not found.</string>
    <string name="birthday">Birthday</string>
    <string name="error_currencyConversion">error while retrieving the exchange rate.</string>
    <string name="error_io">No Internet connection, please try again.</string>
    <string name="field_error_firstname">First name is required</string>
    <string name="field_error_surname">Last name is required</string>
    <string name="field_error_phone">Phone number is required</string>
    <string name="field_error_email">Email is required</string>
    <string name="error_format_email">Invalid email format</string>
    <string name="field_error_date">Date of birth is required</string>
    <string name="error_format_date">Invalid date format</string>
    <string name="error_exchange_rate">Unable to retrieve exchange rate</string>
    <string name="invalid_date">Invalid date</string>
    <string name="all_fiel_error">All fields must be filled</string>
    <string name="success_add_candidate">Candidate added successfully</string>
    <string name="sucess_update_candidate">Candidate updated successfully</string>
    <string name="no_candidate">No candidate</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="error_converting">Error converting salary to GBP</string>
    <string name="invalide_salary">Invalid salary</string>

    <!-- Content description Add Fragment -->
    <string name="add_title">Add Candidate</string>
    <string name="progress_bar_desc">Loading</string>
    <string name="save_button_desc">Button to save candidate information</string>
    <string name="profile_picture_desc">Candidate profile photo. Click to add or edit</string>
    <string name="toolbar_title_desc">Toolbar with page title</string>
    <string name="firstname_desc">Enter the candidate\'s first name</string>
    <string name="lastname_desc">Enter the candidate\'s last name</string>
    <string name="phone_desc">Enter the candidate\'s phone number</string>
    <string name="email_desc">Enter the candidate\'s email address</string>
    <string name="birthdate_field_desc">Field for candidate\'s date of birth</string>
    <string name="select_date_desc">Select a date for date of birth</string>
    <string name="date_picker_icon_desc">Icon to open the date picker</string>
    <string name="salary_desc">Enter the expected salary in euros</string>
    <string name="note_desc">Enter a rating or comment about the candidate</string>

    <!-- Content description Detail candidate -->
    <string name="accessibility_profile_picture">Candidate profile photo</string>
    <string name="accessibility_call_button">Call the candidate</string>
    <string name="accessibility_sms_button">Send an SMS to the candidate</string>
    <string name="accessibility_email_button">Send an email to the candidate</string>
    <string name="accessibility_progressbar">Loading</string>
    <string name="accessibility_toolbar">Toolbar with page title, favorite icon, edit icon and delete icon</string>

    <!-- Dynamic content description Detail candidate-->
    <string name="content_description_profile_picture_of">Profile picture of %1$s %2$s</string>
    <string name="content_description_no_profile_picture">No profile photo available</string>
    <string name="content_description_candidate_age">Age : %1$d years old</string>
    <string name="content_description_age_unknown">Age unknown</string>
    <string name="content_description_note">Note : %1$s</string>
    <string name="content_description_expected_salary">Expected salary : %1$s €</string>
    <string name="content_description_favorite">Marked as favorite</string>
    <string name="content_description_not_favorite">Not marked as favorite</string>

    <!-- Content Descriptions activity main -->
    <string name="content_description_main_view">Main container displaying the details of a candidate or the form to create one.</string>
    <string name="content_description_search_view">Search box to find candidates.</string>
    <string name="content_description_tab_layout">Tabs to navigate between different sections.</string>
    <string name="content_description_view_pager">Paginated content corresponding to the selected tab.</string>
    <string name="content_description_add_candidate">Button to add a new candidate.</string>
    <string name="search_hint">Search for a candidate…</string>

    <!-- Tab items content description -->
    <string name="tab_all_content_description">Afficher tous les candidats</string>
    <string name="tab_favorite_content_description">Afficher les candidats favoris</string>


    <!-- Content Descriptions item candidate-->
    <string name="content_description_candidate_item">Element displaying candidate information.</string>
    <string name="content_description_profile_picture">Candidate profile photo.</string>
    <string name="content_description_candidate_details">Candidate details, including first name, last name and grade.</string>
    <string name="content_description_candidate_name">Full name of candidate.</string>
    <string name="content_description_candidate_note">Candidate note</string>

</resources>