<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:contentDescription="@string/progress_bar_desc"/>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        style="@style/CustomToolbarStyle"
        android:contentDescription="@string/toolbar_title_desc"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_candidate_profile_picture"
                android:layout_width="226dp"
                android:layout_height="203dp"
                android:layout_margin="12dp"
                android:src="@drawable/photo_camera"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/profile_picture_desc"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:gravity="clip_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/person"
                    app:tint="@color/primary_variant" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- firstname field -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_candidate_firstname_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/firstname"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxStrokeWidth="1dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_candidate_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:backgroundTint="@color/secondary"
                            android:textColor="@color/on_secondary"
                            android:contentDescription="@string/firstname_desc"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- surname field -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/add_candidate_surname_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/lastname"

                        app:boxStrokeWidth="1dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_candidate_surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/lastname_desc"
                            android:inputType="textPersonName"
                            android:backgroundTint="@color/secondary"
                            android:textColor="@color/on_secondary"
                            android:textAllCaps="true"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </LinearLayout>
            <!-- phone field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/phone"
                    app:tint="@color/primary_variant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_candidate_phone_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/phone"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_candidate_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:backgroundTint="@color/secondary"
                        android:textColor="@color/on_secondary"
                        android:maxLength="10"
                        android:contentDescription="@string/phone_desc"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- field Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/mail_outline"
                    app:tint="@color/primary_variant"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_candidate_mail_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/mail"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_candidate_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:backgroundTint="@color/secondary"
                        android:textColor="@color/on_secondary"
                        android:contentDescription="@string/email_desc"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- date selector -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:padding="16dp"

                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                tools:ignore="ExtraText">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/cake"
                    app:tint="@color/primary_variant"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:boxCornerRadiusBottomEnd="18dp"
                    app:boxCornerRadiusBottomStart="18dp"
                    app:boxCornerRadiusTopEnd="18dp"
                    app:boxCornerRadiusTopStart="18dp"
                    app:boxStrokeWidth="1dp">

                    <TextView
                        android:id="@+id/select_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_variant"
                        android:contentDescription="@string/select_date_desc"
                        android:text="@string/select_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/add_candidate_birth_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_date">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/add_candidate_birth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:focusable="false"
                                android:focusableInTouchMode="true"
                                android:backgroundTint="@color/secondary"
                                android:textColor="@color/on_secondary"
                                android:inputType="none"
                                android:maxLength="10" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/today"
                            app:tint="#808080"
                            android:contentDescription="@string/date_picker_icon_desc"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- field expected salary -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/money"
                    app:tint="@color/primary_variant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_candidate_salary_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_candidate_salary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:backgroundTint="@color/secondary"
                        android:textColor="@color/on_secondary"
                        android:contentDescription="@string/salary_desc"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Note field -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/create"
                    app:tint="@color/primary_variant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_candidate_note_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/note"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeWidth="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_candidate_note"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:maxLength="100"
                        android:backgroundTint="@color/secondary"
                        android:textColor="@color/on_secondary"
                        android:maxLines="2"
                        android:contentDescription="@string/note_desc"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <!-- Save button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_candidate_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:textAlignment="center"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        tools:ignore="RtlCompat"
        android:contentDescription="@string/save_button_desc"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
